fatta prima section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <header>
       <nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid white">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -38,7 +38,7 @@
       </nav>
 
       <nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid  white">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -86,11 +86,32 @@
             </ul>
 
             <div class="nav navbar-nav navbar-right">
-              <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+              <button type="button" class="btn btn-default navbar-btn">Sign Up</button>
             </div>
           </div>
         </div>
       </nav>
     </header>
+
+    <section class="blue">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 textwhite textcenter">
+            <h1>Welcome to developer cloud</h1>
+            <p class="fnt16">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
+          </div>
+          <div class="col-lg-5 col-lg-offset-1 white textcenter radius">
+            <h2>Deploy in seconds</h2>
+            <div class="contact">
+              <input type="text" name="" placeholder="Email Address">
+              <input type="text" name="" placeholder="Password">
+              <button class="btngreen textwhite" name="button">Create your Account</button>
+              <button type="button" name="button"><i class="fab fa-google"></i> Sign with your account</button>
+              <small>By signing up you agree to the Terms of Service.</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
