fatta seconda section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
   <body>
 
-
-    <!-- HEADER -->
     <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid white">
@@ -110,6 +108,23 @@
               <small>By signing up you agree to the Terms of Service.</small>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="grey">
+      <div class="container textcenter">
+        <div class="<div class="col-lg-10 col-lg-offset-1">
+          <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
+          <ul class="icons">
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+            <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
+          </ul>
+          <a href="#">View customer stories <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </section>
