terza e quarta section completate

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <input type="text" name="" placeholder="Password">
               <button class="btngreen textwhite" name="button">Create your Account</button>
               <button type="button" name="button"><i class="fab fa-google"></i> Sign with your account</button>
-              <small>By signing up you agree to the Terms of Service.</small>
+              <small>By signing up you agree to the <span>Terms of Service</span>.</small>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
 
     <section class="grey">
       <div class="container textcenter">
-        <div class="<div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-10 col-lg-offset-1">
           <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
           <ul class="icons">
             <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
@@ -125,6 +125,73 @@
             <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
           </ul>
           <a href="#">View customer stories <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="col-lg-10 col-lg-offset-1 textcenter">
+          <h1 class="textblue">Deploy and scale seamlessly</h1>
+          <p class="fnt16">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+        </div>
+      </div>
+      <div class="container space">
+        <div class="col-lg-5 col-lg-offset-1">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Cluster deployments</h5>
+          <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+        </div>
+        <div class="col-lg-5 col-lg-offset-1">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Cluster deployments</h5>
+          <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+        </div>
+        <div class="col-lg-5 col-lg-offset-1">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Cluster deployments</h5>
+          <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+        </div>
+        <div class="col-lg-5 col-lg-offset-1">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Cluster deployments</h5>
+          <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="grey">
+      <div class="container textcenter">
+        <div class="col-lg-10 col-lg-offset-1">
+          <h2 class="textblue">Designed for developers</h2>
+          <p class="fnt16">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+          <img class="imgmargin" src="https://www.digitalocean.com/assets/media/homepage/screenshot-create-droplet-5ad845ca.jpg" alt="">
+          <p>Create compute server in 55 seconds or less.</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container space">
+        <h1 class="textblue textcenter">The features your business needs</h1>
+        <div class="col-lg-4">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Predictable pricing</h5>
+          <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+          <a href="https://www.digitalocean.com/">Pricing <i class="fas fa-angle-right"></i></a>
+        </div>
+
+        <div class="col-lg-4">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">World-class service</h5>
+          <p>Free round-the-clock technical support for all customers. You’ll feel the love.</p>
+          <a href="https://www.digitalocean.com/">Support <i class="fas fa-angle-right"></i></a>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-atom fa-2x"></i>
+          <h5 class="textblue">Reliable platform</h5>
+          <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+          <a href="https://www.digitalocean.com/">Security <i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </section>
