quinta e sesta section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 textwhite textcenter">
-            <h1>Welcome to developer cloud</h1>
+            <h1 class="bold">Welcome to developer cloud</h1>
             <p class="fnt16">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
           </div>
           <div class="col-lg-5 col-lg-offset-1 white textcenter radius">
@@ -132,29 +132,29 @@
     <section>
       <div class="container">
         <div class="col-lg-10 col-lg-offset-1 textcenter">
-          <h1 class="textblue">Deploy and scale seamlessly</h1>
+          <h1 class="textblue bold">Deploy and scale seamlessly</h1>
           <p class="fnt16">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
         </div>
       </div>
       <div class="container space">
         <div class="col-lg-5 col-lg-offset-1">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Cluster deployments</h5>
+          <h5 class="textblue bold">Cluster deployments</h5>
           <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
         </div>
         <div class="col-lg-5 col-lg-offset-1">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Cluster deployments</h5>
+          <h5 class="textblue bold">Cluster deployments</h5>
           <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
         </div>
         <div class="col-lg-5 col-lg-offset-1">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Cluster deployments</h5>
+          <h5 class="textblue bold">Cluster deployments</h5>
           <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
         </div>
         <div class="col-lg-5 col-lg-offset-1">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Cluster deployments</h5>
+          <h5 class="textblue bold">Cluster deployments</h5>
           <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
         </div>
       </div>
@@ -163,7 +163,7 @@
     <section class="grey">
       <div class="container textcenter">
         <div class="col-lg-10 col-lg-offset-1">
-          <h2 class="textblue">Designed for developers</h2>
+          <h2 class="textblue bold">Designed for developers</h2>
           <p class="fnt16">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
           <img class="imgmargin" src="https://www.digitalocean.com/assets/media/homepage/screenshot-create-droplet-5ad845ca.jpg" alt="">
           <p>Create compute server in 55 seconds or less.</p>
@@ -173,25 +173,110 @@
 
     <section>
       <div class="container space">
-        <h1 class="textblue textcenter">The features your business needs</h1>
+        <h1 class="textblue textcenter bold">The features your business needs</h1>
         <div class="col-lg-4">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Predictable pricing</h5>
+          <h5 class="textblue bold">Predictable pricing</h5>
           <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
           <a href="https://www.digitalocean.com/">Pricing <i class="fas fa-angle-right"></i></a>
         </div>
 
         <div class="col-lg-4">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">World-class service</h5>
+          <h5 class="textblue bold">World-class service</h5>
           <p>Free round-the-clock technical support for all customers. You’ll feel the love.</p>
           <a href="https://www.digitalocean.com/">Support <i class="fas fa-angle-right"></i></a>
         </div>
         <div class="col-lg-4">
           <i class="fas fa-atom fa-2x"></i>
-          <h5 class="textblue">Reliable platform</h5>
+          <h5 class="textblue bold">Reliable platform</h5>
           <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
           <a href="https://www.digitalocean.com/">Security <i class="fas fa-angle-right"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <section class="blue">
+      <div class="container">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h1 class="textwhite textcenter bold">Service your customers around the world from 12 regions.</h1>
+        </div>
+        <div class="col-lg-6 space">
+          <div class="col-lg-2 textwhite">
+            <ul>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+            </ul>
+          </div>
+          <div class="col-lg-6 textgrey">
+            <ul>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+            </ul>
+          </div>
+          <div class="col-lg-4 textazure">
+            <ul>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-6 space">
+          <div class="col-lg-2 textwhite">
+            <ul>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+              <li>AMS2</li>
+            </ul>
+          </div>
+          <div class="col-lg-6 textgrey">
+            <ul>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+              <li>Amsterdam, Netherlands</li>
+            </ul>
+          </div>
+          <div class="col-lg-4 textazure">
+            <ul>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+              <li>Test speed <i class="fas fa-angle-right"></i> </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section white>
+      <div class="container textcenter">
+        <div class="col-lg-10 col-lg-offset-1">
+          <h2 class="textblue bold">Development teams love DigitalOcean</h2>
+          <img class="imgmargin" id="comment" src="https://www.digitalocean.com/assets/media/homepage/teams/content-ignite-logo-98619eaf.png" alt="">
+          <p class="textgrey">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+          <h5 class="textgrey">Jamie Druce</h5>
+          <h6 class="textgrey">Senior Web Developer</h6>
+          <a href="#">Read story <i class="fas fa-angle-right"></i> </a>
         </div>
       </div>
     </section>
