--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </nav>
     </header>
 
-    <section class="blue">
+    <section class="azure">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 textwhite textcenter">
@@ -114,7 +114,7 @@
 
     <section class="grey">
       <div class="container textcenter">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-lg-12">
           <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
           <ul class="icons">
             <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
@@ -280,5 +280,83 @@
         </div>
       </div>
     </section>
+
+    <section class="azure">
+      <div class="container textwhite textcenter contact">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2 class="bold">Get started now.</h2>
+          <button class="btngreen" name="button">Create your Account</button>
+        </div>
+      </div>
+    </section>
+
+    <footer vlink class="blue">
+      <div class="container space">
+        <div class="col-lg-4">
+          <i class="fab fa-digital-ocean fa-3x textazure"></i>
+          <p class="textgrey">© 2019 DigitalOcean, LLC. All rights reserved. Proudly made in NY</p>
+          <ul class="textgrey inline">
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+            <li><i class="fab fa-facebook fa-2x"></i></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 block">
+          <h5 class="textwhite">Company</h5>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+        </div>
+
+        <div class="col-lg-2 textgrey block">
+          <h5 class="textwhite">Company</h5>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+        </div>
+
+        <div class="col-lg-2 textgrey block">
+          <h5 class="textwhite">Company</h5>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+        </div>
+
+        <div class="col-lg-2 textgrey block">
+          <h5 class="textwhite">Company</h5>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+          <a href="#">About</a>
+        </div>
+    </footer>
   </body>
 </html>
