--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="bold">Welcome to developer cloud</h1>
             <p class="fnt16">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
           </div>
-          <div class="col-lg-5 col-lg-offset-1 col-xs-12 white textcenter radius">
+          <div class="col-lg-5 col-lg-offset-1 col-xs-10 col-xs-offset-1 white textcenter radius">
             <h2>Deploy in seconds</h2>
             <div class="contact">
               <input type="text" name="" placeholder="Email Address">
@@ -115,7 +115,7 @@
     <section class="grey">
       <div class="container textcenter centervert">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-xs-12">
             <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
             <ul class="icons">
               <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
@@ -208,7 +208,7 @@
     <section class="blue">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 col-xs-12">
+          <div class="col-lg-10 col-lg-offset-2 col-xs-12">
             <h1 class="textwhite textcenter bold">Service your customers around the world from 12 regions.</h1>
           </div>
           <div class="col-lg-6 col-xs-12 space">
@@ -232,7 +232,7 @@
                 <li>Amsterdam, Netherlands</li>
               </ul>
             </div>
-            <div class="col-lg-4 col-xs-3 textazure">
+            <div class="col-lg-4 col-xs-4 textazure">
               <ul>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
@@ -297,7 +297,7 @@
     <section class="azure">
       <div class="container textwhite textcenter contact">
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 col-xs-12">
+          <div class="col-lg-10 col-lg-offset-1 col-xs-12">
             <h2 class="bold">Get started now.</h2>
             <button class="btngreen" name="button">Create your Account</button>
           </div>
