--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
 
       <nav class="navbar navbar-default">
-        <div class="container-fluid  white">
+        <div class="container-fluid white">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -94,11 +94,11 @@
     <section class="azure postheader">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-xs-12 textwhite textcenter">
-            <h1 class="bold">Welcome to developer cloud</h1>
-            <p class="fnt16">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
+          <div class="col-lg-6 col-xs-12 col-sm-6 textwhite textleft">
+            <h1 class="bold centervert">Welcome to developer cloud</h1>
+            <p class="fnt16 centervert">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
           </div>
-          <div class="col-lg-5 col-lg-offset-1 col-xs-10 col-xs-offset-1 white textcenter radius">
+          <div class="col-lg-5 col-offset-1 col-xs-10 col-xs-offset-1 col-sm-6 white textcenter radius">
             <h2>Deploy in seconds</h2>
             <div class="contact">
               <input type="text" name="" placeholder="Email Address">
@@ -115,7 +115,7 @@
     <section class="grey">
       <div class="container textcenter centervert">
         <div class="row">
-          <div class="col-lg-12 col-xs-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12">
             <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
             <ul class="icons">
               <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
@@ -134,7 +134,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 col-lg-offset-1 col-xs-12 textcenter">
+          <div class="col-lg-12 col-xs-12 col-sm-12 textcenter">
             <h1 class="textblue bold">Deploy and scale seamlessly</h1>
             <p class="fnt16">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
           </div>
@@ -142,22 +142,22 @@
       </div>
       <div class="container space">
         <div class="row">
-          <div class="col-lg-5 col-lg-offset-1">
+          <div class="col-lg-6 col-xs-12 col-sm-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-5 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-6 col-xs-12 col-sm-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-5 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-6 col-xs-12 col-sm-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-5 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-6 col-xs-12 col-sm-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
@@ -169,7 +169,7 @@
     <section class="grey">
       <div class="container textcenter">
         <div class="row">
-          <div class="col-lg-10 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12">
             <h2 class="textblue bold">Designed for developers</h2>
             <p class="fnt16">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
             <img class="imgmargin" src="https://www.digitalocean.com/assets/media/homepage/screenshot-create-droplet-5ad845ca.jpg" alt="">
@@ -183,19 +183,19 @@
       <div class="container space">
         <div class="row">
           <h1 class="textblue textcenter bold">The features your business needs</h1>
-          <div class="col-lg-4 col-xs-12">
+          <div class="col-lg-4 col-xs-12 col-sm-4">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Predictable pricing</h5>
             <p>Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
             <a href="https://www.digitalocean.com/">Pricing <i class="fas fa-angle-right"></i></a>
           </div>
-          <div class="col-lg-4 col-xs-12">
+          <div class="col-lg-4 col-xs-12 col-sm-4">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">World-class service</h5>
             <p>Free round-the-clock technical support for all customers. You’ll feel the love.</p>
             <a href="https://www.digitalocean.com/">Support <i class="fas fa-angle-right"></i></a>
           </div>
-          <div class="col-lg-4 col-xs-12">
+          <div class="col-lg-4 col-xs-12 col-sm-4">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Reliable platform</h5>
             <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
@@ -208,11 +208,11 @@
     <section class="blue">
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 col-lg-offset-2 col-xs-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12">
             <h1 class="textwhite textcenter bold">Service your customers around the world from 12 regions.</h1>
           </div>
-          <div class="col-lg-6 col-xs-12 space">
-            <div class="col-lg-2 col-xs-3 textwhite">
+          <div class="col-lg-6 col-xs-12 col-sm-12 space">
+            <div class="col-lg-2 col-xs-3 col-sm-2 textwhite">
               <ul>
                 <li>AMS2</li>
                 <li>AMS2</li>
@@ -222,7 +222,7 @@
                 <li>AMS2</li>
               </ul>
             </div>
-            <div class="col-lg-6 col-xs-5 textgrey">
+            <div class="col-lg-6 col-xs-5 col-sm-6 textgrey">
               <ul>
                 <li>Amsterdam, Netherlands</li>
                 <li>Amsterdam, Netherlands</li>
@@ -232,7 +232,7 @@
                 <li>Amsterdam, Netherlands</li>
               </ul>
             </div>
-            <div class="col-lg-4 col-xs-4 textazure">
+            <div class="col-lg-4 col-xs-4 col-sm-4 textazure textright">
               <ul>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
@@ -243,8 +243,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6 col-xs-12 space">
-            <div class="col-lg-2 col-xs-1 textwhite">
+          <div class="col-lg-6 col-xs-12 col-sm-12 space">
+            <div class="col-lg-2 col-xs-3 col-sm-2 textwhite">
               <ul>
                 <li>AMS2</li>
                 <li>AMS2</li>
@@ -254,7 +254,7 @@
                 <li>AMS2</li>
               </ul>
             </div>
-            <div class="col-lg-6 col-xs-5 col-xs-offset-2 textgrey">
+            <div class="col-lg-6 col-xs-5 col-sm-6 textgrey">
               <ul>
                 <li>Amsterdam, Netherlands</li>
                 <li>Amsterdam, Netherlands</li>
@@ -264,7 +264,7 @@
                 <li>Amsterdam, Netherlands</li>
               </ul>
             </div>
-            <div class="col-lg-4 col-xs-1 textazure">
+            <div class="col-lg-4 col-xs-4 col-sm-4 textazure textright">
               <ul>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
                 <li>Test speed <i class="fas fa-angle-right"></i> </li>
@@ -282,7 +282,7 @@
     <section white>
       <div class="container textcenter">
         <div class="row">
-          <div class="col-lg-10 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12">
             <h2 class="textblue bold">Development teams love DigitalOcean</h2>
             <img class="imgmargin" id="comment" src="https://www.digitalocean.com/assets/media/homepage/teams/content-ignite-logo-98619eaf.png" alt="">
             <p class="textgrey">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
@@ -297,7 +297,7 @@
     <section class="azure">
       <div class="container textwhite textcenter contact">
         <div class="row">
-          <div class="col-lg-10 col-lg-offset-1 col-xs-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12">
             <h2 class="bold">Get started now.</h2>
             <button class="btngreen" name="button">Create your Account</button>
           </div>
@@ -308,7 +308,7 @@
     <footer vlink class="blue">
       <div class="container space">
         <div class="row">
-          <div class="col-lg-4 col-xs-12">
+          <div class="col-lg-4 col-xs-12 col-sm-12">
             <i class="fab fa-digital-ocean fa-3x textazure"></i>
             <p class="textgrey">© 2019 DigitalOcean, LLC. All rights reserved. Proudly made in NY</p>
             <ul class="textgrey inline">
@@ -321,7 +321,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-xs-12 block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 block">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
@@ -333,25 +333,11 @@
             <a href="#">About</a>
           </div>
 
-          <div class="col-lg-2 col-xs-12 textgrey block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
             <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-          </div>
-
-          <div class="col-lg-2 col-xs-12 textgrey block">
-            <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
             <a href="#">About</a>
@@ -364,7 +350,21 @@
             <a href="#">About</a>
           </div>
 
-          <div class="col-lg-2 col-xs-12 textgrey block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
+            <h5 class="textwhite">Company</h5>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+          </div>
+
+          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
