--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
     <section class="azure postheader">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-xs-12 col-sm-6 textwhite textleft">
+          <div class="col-lg-6 col-xs-12 col-sm-6 col-md-6 textwhite textleft">
             <h1 class="bold centervert">Welcome to developer cloud</h1>
             <p class="fnt16 centervert">We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand.</p>
           </div>
-          <div class="col-lg-5 col-offset-1 col-xs-10 col-xs-offset-1 col-sm-6 white textcenter radius">
+          <div class="col-lg-5 col-offset-1 col-xs-10 col-xs-offset-1 col-sm-6 col-md-4 col-md-offset-1 white textcenter radius">
             <h2>Deploy in seconds</h2>
             <div class="contact">
               <input type="text" name="" placeholder="Email Address">
@@ -115,7 +115,7 @@
     <section class="grey">
       <div class="container textcenter centervert">
         <div class="row">
-          <div class="col-lg-12 col-xs-12 col-sm-12">
+          <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
             <h4>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h4>
             <ul class="icons">
               <li><img src="https://www.digitalocean.com/assets/media/homepage/logos/slack-0c6bb799.png" alt=""></li>
@@ -142,22 +142,22 @@
       </div>
       <div class="container space">
         <div class="row">
-          <div class="col-lg-6 col-xs-12 col-sm-6">
+          <div class="col-lg-6 col-xs-12 col-sm-6 col-md-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-6 col-xs-12 col-sm-6">
+          <div class="col-lg-6 col-xs-12 col-sm-6 col-md-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-6 col-xs-12 col-sm-6">
+          <div class="col-lg-6 col-xs-12 col-sm-6 col-md-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
           </div>
-          <div class="col-lg-6 col-xs-12 col-sm-6">
+          <div class="col-lg-6 col-xs-12 col-sm-6 col-md-6">
             <i class="fas fa-atom fa-2x"></i>
             <h5 class="textblue bold">Cluster deployments</h5>
             <p>Provision multiple Droplets (virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
@@ -211,7 +211,7 @@
           <div class="col-lg-12 col-xs-12 col-sm-12">
             <h1 class="textwhite textcenter bold">Service your customers around the world from 12 regions.</h1>
           </div>
-          <div class="col-lg-6 col-xs-12 col-sm-12 space">
+          <div class="col-lg-6 col-xs-12 col-sm-12 col-md-6 space">
             <div class="col-lg-2 col-xs-3 col-sm-2 textwhite">
               <ul>
                 <li>AMS2</li>
@@ -243,7 +243,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6 col-xs-12 col-sm-12 space">
+          <div class="col-lg-6 col-xs-12 col-sm-12 col-md-6 space">
             <div class="col-lg-2 col-xs-3 col-sm-2 textwhite">
               <ul>
                 <li>AMS2</li>
@@ -308,7 +308,7 @@
     <footer vlink class="blue">
       <div class="container space">
         <div class="row">
-          <div class="col-lg-4 col-xs-12 col-sm-12">
+          <div class="col-lg-3 col-xs-12 col-sm-12 col-md-3">
             <i class="fab fa-digital-ocean fa-3x textazure"></i>
             <p class="textgrey">© 2019 DigitalOcean, LLC. All rights reserved. Proudly made in NY</p>
             <ul class="textgrey inline">
@@ -321,7 +321,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-xs-12 col-sm-6 block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 col-md-2 block col-md-offset-1">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
@@ -333,25 +333,11 @@
             <a href="#">About</a>
           </div>
 
-          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 col-md-2 textgrey block">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
             <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-            <a href="#">About</a>
-          </div>
-
-          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
-            <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
             <a href="#">About</a>
@@ -364,7 +350,21 @@
             <a href="#">About</a>
           </div>
 
-          <div class="col-lg-2 col-xs-12 col-sm-6 textgrey block">
+          <div class="col-lg-2 col-xs-12 col-sm-6 col-md-2 textgrey block">
+            <h5 class="textwhite">Company</h5>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+          </div>
+
+          <div class="col-lg-2 col-xs-12 col-sm-6 col-md-2 textgrey block">
             <h5 class="textwhite">Company</h5>
             <a href="#">About</a>
             <a href="#">About</a>
